start codes to confirm all files are connected and working

--- a/01-new_year_time_counter/01-new_year_time_counter.html
+++ b/01-new_year_time_counter/01-new_year_time_counter.html
@@ -9,6 +9,8 @@
 </head>
 <body>
 
+  <h1>Hello Janta</h1>
+
   
     
   <script src="/01-new_year_time_counter/scripts/01-new_year_time_counter.js"></script>  
