--- a/01-new_year_time_counter/01-new_year_time_counter.html
+++ b/01-new_year_time_counter/01-new_year_time_counter.html
@@ -9,7 +9,31 @@
 </head>
 <body>
 
-  <h1>Hello Janta</h1>
+  <h1>New Years Eve</h1>
+
+  <div class="countdown-container">
+
+    <div class="days-c countdown-el">
+      <p class="big-text" id="days">0</p>
+      <span>days</span>
+    </div>
+
+    <div class="hours-c countdown-el">
+      <p class="big-text" id="hours">0</p>
+      <span>hours</span>
+    </div>
+
+    <div class="mins-c countdown-el">
+      <p class="big-text" id="mins">0</p>
+      <span>mins</span>
+    </div>
+
+    <div class="seconds-c countdown-el">
+      <p class="big-text" id="seconds">0</p>
+      <span>seconds</span>
+    </div>
+
+  </div>
 
   
     
