1st iteration done.

--- a/02-quiz_app/02-quiz_app.html
+++ b/02-quiz_app/02-quiz_app.html
@@ -11,7 +11,7 @@
 
 <body>
 
-  <div class="quiz-container">
+  <div class="quiz-container js-quiz">
     <div class="quiz-header">
 
       <h2 id="qtn">Question Text</h2>
