Movies Project 1st stage Done 20240810

--- a/04-movie_project/04-movie_project.html
+++ b/04-movie_project/04-movie_project.html
@@ -9,6 +9,14 @@
 </head>
 <body>
 
+  <header>
+    <form id="form">
+     <input type="text" id="search" class="search"
+      placeholder="Search"/>
+    </form>
+  </header>
+  <main></main>
+
     
     
   <script src="/04-movie_project/script/04-movie_project.js"></script>  
